kubernetes/apps/home-automation/blocket-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocket-bot
  namespace: home-automation

spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocket-bot
  template:
    metadata:
      labels:
        app: blocket-bot

    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000

      containers:
        - name: blocket-bot
          image: rutbergphilip/blocket-bot:v2.0.0
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: true

          resources:
            limits:
              memory: 500Mi
              cpu: 200m
            requests:
              memory: 200Mi
              cpu: 100m

          volumeMounts:
            - name: blocket-bot-db
              mountPath: /data

      volumes:
        - name: blocket-bot-db
          persistentVolumeClaim:
            claimName: blocket-bot-db
