kubernetes/apps/home-automation/blocket-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocket-bot
  namespace: home-automation
spec:
  selector:
    app: blocket-bot
  ports:
    - protocol: TCP
      port: 10020
      targetPort: 3000
